--- a/AxonApparel.Contract/AxonApparel.Domain.csproj
+++ b/AxonApparel.Contract/AxonApparel.Domain.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Api\ApiOrderStatusDetails.cs" />
     <Compile Include="Api\ApiProcessDetail.cs" />
     <Compile Include="Api\ApiProcessPrgAppdetails.cs" />
+    <Compile Include="Api\ApiProcessQuotationApp.cs" />
     <Compile Include="Api\ApiProfitlossdetaillist.cs" />
     <Compile Include="Api\ApiProfitlossfilter.cs" />
     <Compile Include="Api\ApiPurchaseApproval.cs" />
