--- a/AxonApparels/AxonApparel.Web.csproj
+++ b/AxonApparels/AxonApparel.Web.csproj
@@ -226,6 +226,7 @@
     <Compile Include="ApiControllers\ApisStockSummaryController.cs" />
     <Compile Include="ApiControllers\ApiStockStatusController.cs" />
     <Compile Include="ApiControllers\ApiStylGalleryController.cs" />
+    <Compile Include="ApiControllers\ProcessQuotationApprovalController.cs" />
     <Compile Include="ApiControllers\PurchaseQuotationApprovalController.cs" />
     <Compile Include="ApparelTestDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
