--- a/AxonApparel.Repository/AxonApparel.Repository.csproj
+++ b/AxonApparel.Repository/AxonApparel.Repository.csproj
@@ -508,6 +508,7 @@
     <Compile Include="Implementation\AgentRepository.cs" />
     <Compile Include="Implementation\Api\ApiBudgetApprovalRepository.cs" />
     <Compile Include="Implementation\Api\ApiConsCostRepository.cs" />
+    <Compile Include="Implementation\Api\ApiLoginRepository.cs" />
     <Compile Include="Implementation\Api\ApiOrderStatusRepository.cs" />
     <Compile Include="Implementation\Api\ApiProcessOutstandingRepository.cs" />
     <Compile Include="Implementation\Api\ApiProfitLossRepository.cs" />
@@ -713,6 +714,7 @@
     </Compile>
     <Compile Include="Interface\Api\IApiBudgetApprovalRepository.cs" />
     <Compile Include="Interface\Api\IApiConsCostRepository.cs" />
+    <Compile Include="Interface\Api\IApiLoginRepository.cs" />
     <Compile Include="Interface\Api\IApiOrderStatusRepository.cs" />
     <Compile Include="Interface\Api\IApiProcessOutstandingRepository.cs" />
     <Compile Include="Interface\Api\IApiProfitLossRepository.cs" />
