--- a/AxonApparels/AxonApparel.Web.csproj
+++ b/AxonApparels/AxonApparel.Web.csproj
@@ -215,6 +215,7 @@
     <Compile Include="ApiControllers\ApiCompanyController.cs" />
     <Compile Include="ApiControllers\ApiConsCostingController.cs" />
     <Compile Include="ApiControllers\ApiLoginController.cs" />
+    <Compile Include="ApiControllers\ApiMISPathController.cs" />
     <Compile Include="ApiControllers\ApiOrderStatusController.cs" />
     <Compile Include="ApiControllers\ApiProcessOrdApprovalController.cs" />
     <Compile Include="ApiControllers\ApiProcessoutstandingController.cs" />
