All files changed after 06-09-2024

--- a/AxonApparel.Contract/AxonApparel.Domain.csproj
+++ b/AxonApparel.Contract/AxonApparel.Domain.csproj
@@ -54,13 +54,16 @@
     <Compile Include="Api\ApiProcessDetail.cs" />
     <Compile Include="Api\ApiProcessPrgAppdetails.cs" />
     <Compile Include="Api\ApiProcessQuotationApp.cs" />
+    <Compile Include="Api\ApiProductionOutstabdingDetails.cs" />
     <Compile Include="Api\ApiProfitlossdetaillist.cs" />
     <Compile Include="Api\ApiProfitlossfilter.cs" />
     <Compile Include="Api\ApiPurchaseApproval.cs" />
     <Compile Include="Api\ApiPurchaseDetail.cs" />
     <Compile Include="Api\ApiPurchaseQuotationApp.cs" />
+    <Compile Include="Api\ApiRole.cs" />
     <Compile Include="Api\ApiSplReqdetails.cs" />
     <Compile Include="Api\ApiStockFilter.cs" />
+    <Compile Include="Api\Apistyledetail.cs" />
     <Compile Include="Budget\BudgetApproval.cs" />
     <Compile Include="Budget\CostDefnBomFirst.cs" />
     <Compile Include="Budget\PlanningApproval.cs" />
