--- a/AxonApparels/AxonApparel.Web.csproj
+++ b/AxonApparels/AxonApparel.Web.csproj
@@ -221,13 +221,16 @@
     <Compile Include="ApiControllers\ApiProcessoutstandingController.cs" />
     <Compile Include="ApiControllers\ApiProcessPrgApprovalController.cs" />
     <Compile Include="ApiControllers\ApiProcessQuotationAppController.cs" />
+    <Compile Include="ApiControllers\ApiProductionOutstandingController.cs" />
     <Compile Include="ApiControllers\ApiProfitLossController.cs" />
     <Compile Include="ApiControllers\ApiPurchaseApprovalController.cs" />
     <Compile Include="ApiControllers\ApiPurchaseOutstandingController.cs" />
+    <Compile Include="ApiControllers\ApiRoleController.cs" />
     <Compile Include="ApiControllers\ApiSplReqApprovalController.cs" />
     <Compile Include="ApiControllers\ApisStockSummaryController.cs" />
     <Compile Include="ApiControllers\ApiStockStatusController.cs" />
     <Compile Include="ApiControllers\ApiStylGalleryController.cs" />
+    <Compile Include="ApiControllers\PrivacypolicyController.cs" />
     <Compile Include="ApiControllers\PurchaseQuotationApprovalController.cs" />
     <Compile Include="ApparelTestDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -4691,6 +4694,7 @@
     <Content Include="PlanDetCostCostSummDataSet.xss">
       <DependentUpon>PlanDetCostCostSummDataSet.xsd</DependentUpon>
     </Content>
+    <Content Include="PrivacyPolicy\Privacy Policy.txt" />
     <Content Include="ReportInline\BudgetApproval\BudgetApprovalInlineReport.aspx" />
     <Content Include="ReportInline\OrderProcessing\AmdQuotationInLineReport.aspx" />
     <Content Include="ReportInline\OrderProcessing\JobWorkInlineReport.aspx" />
